Update block loader to use DenseVectorSourceValueFetcher